[ADD] Lockdown stops when mayor changes job or leaves server
[ADD] rp_DeathPOV: Enable/disable whether people see their death in first person view
[ADD] rp_respawninjail - Enable/disable whether people can respawn in jail when they die (default on)
[ADD] /911 and /report: Call 911 when you're being attacked and call /report when you see an illegal entity!
[FIX] // not working in letters
[FIX] Disabling RP names not working clientside
[FIX] Weapon checker resetting ammo
[FIX] Gunlicense buttons in F4
[FIX] Shipment issues
[FIX] Pocket glitch
[FIX] drop pickup get ammo glitch
[FIX] Sitting incorrectly in vehicles
[FIX] Switchjob not working when player can't change job for some reason
[FIX] Modules not working when folder name was changed
[FIX] Jail positions not saving
[FIX] Compatability with extra seats in VUMod
[FIX] animations to work with latest update
[CHANGE] Microphone GUI layout. It's way more RP'ish now!
[CHANGE] Credits, added Eusion
[CHANGE] The way Entities like money and money printers show their information. Thanks MavBear!
[CHANGE] Made a lot of functions local, this will give you better overall performance both on server and client
[REMOVE] ALL NWVars in doors, players and custom entities (shipments, druglabs etc.) DarkRP now has LESS NWVars than sandbox!
[REMOVE] VoteCopOn. It's bullshit
[REMOVE] All global integers. Result: Less server crashes, less buffer overflow in net message, faster spawning time
[REMOVE] SendLua's to open keys and F4 menu. I don't even know why I had them there in the first place
[REMOVE] FindPlayerBySID, SID is the player's UserID, Player(SID) does exactly the same thing.
[REMOVE] Unused functions such as rp_paydaytime and FoodHeal

DarkRP 2.4.1

[ADD] rp_ironshoot, set if people have to see through the ironsights to shoot
[ADD] Falco's Prop protection (FPP), reporting for duty to replace Simple Prop Protection!
[ADD] Anti tool model crash(FPP feature)
[ADD] An easy way to make normal entities
[ADD] CPPI for FPP