@@ -8,5 +8,5 @@ ENT.AdminSpawnable = false
 function ENT:SetupDataTables()
 	self:DTVar("Entity", 1, "reporter")
 	self:DTVar("Bool", false, "alarm")
-	self:DTVar("Entity", 1, "reported")
+	self:DTVar("Entity", 2, "reported")
 end
